--- a/Arsha/live-demo.html
+++ b/Arsha/live-demo.html
@@ -48,7 +48,7 @@
   </header><!-- End Header -->
 
   <main id="main">
-    <script src="../CodeLiveDemo/output.js"></script>
+    <script src="output.js"></script>
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
