Add live demo stuff.

--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -173,7 +173,7 @@
                       </div>
                       <div class = "row">
                         <div class = "col-12">
-                          <a href="./live-demo.html" 
+                          <a href="./live-demo/index.html" 
                           class="btn-learn-more">Live Demo</a>
                         </div>
                     </p>
