--- a/Arsha/live-demo/index.html
+++ b/Arsha/live-demo/index.html
@@ -2,7 +2,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
-<script src="jimp.js"></script>
+<script src="https://unpkg.com/jimp@0.16.0/browser/lib/jimp.js" crossorigin="anonymous"></script>
 
 <html>
 <title>Convolution Tester</title>
