Add JS files for download and delete unsed files.

--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -42,14 +42,14 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Arsha</a></h1>
+      <h1 class="logo me-auto"><a href="index.html">Conv Runner</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#our-mediums">Our Mediums</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -139,7 +139,7 @@
 
 
     <!-- ======= Why Us Section ======= -->
-    <section id="why-us" class="why-us section-bg">
+    <section id="our-mediums" class="why-us section-bg">
       <div class="container-fluid" data-aos="fade-up">
 
         <div class="row">
@@ -156,12 +156,13 @@
             <div class="accordion-list">
               <ul>
                 <li>
-                  <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Running in Node without threading <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                  <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Running in a browser <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
-                      Due to the lack of relibility on browsers to support threading, our app will demo a single threaded version that was compiled to webassembly.
-                      The below chart plots how fast the library was when it ran in node vs a native C++ application. As expected native code runs consistantly faster.
-                      However, the emscripten compiled library is only running 8% slower than native. An imressive result from WASM.
+                      A demo website is provided to run your images. To gather data on how fast the library runs
+                      compared to a native app, we ran a node program that consumes the library and runs a Convolution
+                      on an input image. The Native was always faster but you can see on the means chart, WASM was 
+                      only marginally slower.
                       <br><br>
                       <div class = "row">
                         <div class="col-6">
