--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -155,12 +155,12 @@
               <ul>
                 <li>
                   <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Running in a browser <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-                  <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
+                  <div id="accordion-list-1" class="collapse" data-bs-parent=".accordion-list">
                     <p>
                       A demo website is provided to run your images. To gather data on how fast the library runs
                       compared to a native app, we ran a node program that consumes the library and runs a Convolution
                       on an input image. The Native was always faster but you can see on the means chart, WASM was 
-                      only marginally slower.
+                      only marginally slower. Images were run on a 1920 × 1080
                     </p>
                       <br><br>
                       <div class = "row">
@@ -225,7 +225,7 @@
                         </div>
                       </div>
                       <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a href="https://github.com/nlarsensmu/Convolution-Product-Website/raw/b3b5c5f24f3b97ce7f97d50faec174a66602af3e/DeployedFiles/lab-5-electronjs-nlarsensmu.zip" 
+                        <a href="https://github.com/nlarsensmu/Convolution-Product-Website/raw/master/DeployedFiles/library.zip" 
                         class="btn-learn-more">Download JS Library</a>
                       </div>
                     </p>
@@ -271,7 +271,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
+          <div id="library_download" class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">Web Assembly Library or your application</a></h4>
@@ -295,24 +295,40 @@
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up" data-aos-delay="100">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">
+              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-1" class="collapsed">
                 How to set up Library <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-2" class="collapse show" data-bs-parent=".faq-list">
+              <div id="faq-list-1" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  <h5 >1. Download the libraries</h5> 
+                  Get the library files from preivous section (linked below). Place those files into your project<br>
+                   <a href="#library_download">download</a>.
 
+                   <h5>2. Bring those files into your node/html file</h5>
+                   <h6>In your index.html file</h6>
+                   If your application is being served in a website use:<br><br>
+                   <img src="assets/img/indexhtmlshot.png" class="img-fluid" alt="">
+                   <br><br>
+                   <h6>In a node application</h6>
+                   If your application is not in a html webpage, you can load it into a node file using:<br><br>
+                   <img src="assets/img/nodeshot.png" class="img-fluid" alt="">
+                   <br><br>
+                   <h5>3. Run on an image you have loaded</h5>
+                   Assuming you ahve an image loaded in "imgFloat" as a float array you can use this code to run a conv:<br><br>
+                   <img src="assets/img/RunOneConv.png" class="img-fluid" alt="">
+                   
+                </p>
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">
                 API Documentation <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-2" class="collapse show" data-bs-parent=".faq-list">
-                <p>
+              <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                   
-                </p>
               </div>
             </li>
 
             <li data-aos="fade-up" data-aos-delay="300">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">
                 Design Document<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-              <div id="faq-list-3" class="collapse show" data-bs-parent=".faq-list">
+              <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Below is a document describing the API you can download to use in your application.
                   <br>
