--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -257,15 +257,17 @@
         <div class="row">
           <div class="col-xl-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <div class="icon"><i class="bx bx-calendar-check"></i></div>
               <h4><a href="./live-demo/index.html">Live Web Demo</a></h4>
-              <p>TODO: I Need to add text here and I need to add a new image</p>
+              <p>
+                <img src="assets/img/live-demo-emboss.png" class="img-fluid" alt="">
+              </p>
             </div>
           </div>
 
           <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <div class="icon"><i class="bx bx-tachometer"></i></div>
               <h4><a href="">Electron App Downloads</a></h4>
               <p>TODO: I Need to add text here and I need to add a new image</p>
             </div>
@@ -273,7 +275,7 @@
 
           <div id="library_download" class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Web Assembly Library or your application</a></h4>
               <p>TODO: I Need to add text here and I need to add a new image</p>
             </div>
