Add windows downloads.

--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -202,7 +202,7 @@
                           class="btn-learn-more">Download MAC</a>
                         </div>
                         <div class = "col-6 d-flex justify-content-center justify-content-lg-start">
-                          <a href="https://github.com/nlarsensmu/Convolution-Product-Website/raw/b3b5c5f24f3b97ce7f97d50faec174a66602af3e/DeployedFiles/lab-5-electronjs-nlarsensmu.zip" 
+                          <a href="https://github.com/nlarsensmu/Convolution-Product-Website/releases/download/1.0.0/lab-5-electronjs-nlarsensmu-win32-x64.zip" 
                           class="btn-learn-more">Download Windows</a>
                         </div>
                       </div>
@@ -278,7 +278,7 @@
                   class="btn-learn-more">Download MAC</a>
                 </div>
                 <div class = "col-6 d-flex justify-content-center justify-content-lg-start">
-                  <a href="https://github.com/nlarsensmu/Convolution-Product-Website/raw/b3b5c5f24f3b97ce7f97d50faec174a66602af3e/DeployedFiles/lab-5-electronjs-nlarsensmu.zip" 
+                  <a href="https://github.com/nlarsensmu/Convolution-Product-Website/releases/download/1.0.0/lab-5-electronjs-nlarsensmu-win32-x64.zip" 
                   class="btn-learn-more">Download Windows</a>
                 </div>
               </div>
