Add electron files.

--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -215,18 +215,15 @@
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p id="download_library">
                       You can download the compiled WASM files to include our library in your project! Below are the needed
-                      files.
-                      <div class = "row">
-                        <div class="col-6">
-                          <img src="assets/img/charts/threads_native.png" class="img-fluid" alt="">
-                        </div>
-                        <div class="col-6">
-                          <img src="assets/img/charts/threads_node.png" class="img-fluid" alt="">
-                        </div>
-                      </div>
+                      files. Use the below code snipet as a guide, or read more below. 
                       <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="https://github.com/nlarsensmu/Convolution-Product-Website/raw/master/DeployedFiles/library.zip" 
                         class="btn-learn-more">Download JS Library</a>
+                      </div><br><br>
+                      <div class = "row">
+                        <div class="col-12">
+                          <img src="assets/img/RunOneConv.png" class="img-fluid" alt="">
+                        </div>
                       </div>
                     </p>
                   </div>
