--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -383,7 +383,7 @@
         <div class ="row">
           <div class="col-xl-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="50">
             <div class="icon-box">
-              <h4><a href="">Elden Ring Edge Original</a></h4>
+              <h4><a href="">Elden Ring Original</a></h4>
               <p>
                 <img src="assets/img/eldenRing.jpeg" class="img-fluid" alt="">
               </p>
