--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -433,7 +433,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
               <div class="pic"><img src="assets/img/team/me.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Nick Larsen</h4>
                 <span>Primary Developer</span>
                 <p></p>
                 <div class="social">
@@ -445,7 +445,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 mt-4 mt-lg-0">
+          <div class="col-lg-6">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/duck.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
