--- a/Arsha/index.html
+++ b/Arsha/index.html
@@ -87,6 +87,7 @@
           <h2>On the web, native application, or in your web application</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#services" class="btn-get-started scrollto">Get Started</a>
+            <a href="./live-demo/index.html" class="glightbox btn-watch-video"><span>Live Demo</span></a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -173,8 +174,7 @@
                       </div>
                       <div>
                         <div class="d-flex justify-content-center justify-content-lg-start">
-                          <a href="./live-demo/index.html" 
-                           class="btn-get-started scrollto">Live Demo</a>
+                          <a href="./live-demo/index.html" class="glightbox btn-watch-video"><span>Live Demo</span></a>
                         </div>
                       </div>
                   </div>
